# ExTraCT

./: .gitignore  README.md  environment.yaml  pyproject.toml
data/: latte_1.json  latte_10.json  latte_11.json  latte_12.json  latte_13.json  latte_14.json  latte_17.json  latte_19.json  latte_2.json  latte_20.json  latte_23.json  latte_24.json  latte_26.json  latte_29.json  latte_34.json  latte_35.json  latte_36.json  latte_40.json  latte_41.json  latte_42.json  latte_46.json  latte_47.json  latte_49.json  latte_53.json  latte_54.json  latte_55.json  latte_57.json  latte_6.json  latte_60.json  latte_61.json  latte_62.json  latte_65.json  latte_66.json  latte_68.json  latte_69.json  latte_7.json  latte_70.json  latte_72.json  latte_74.json
data/extended_subset/: extended_0.json  extended_1.json  extended_10.json  extended_11.json  extended_12.json  extended_13.json  extended_14.json  extended_15.json  extended_16.json  extended_17.json  extended_18.json  extended_19.json  extended_2.json  extended_20.json  extended_21.json  extended_22.json  extended_23.json  extended_24.json  extended_25.json  extended_26.json  extended_27.json  extended_28.json  extended_29.json  extended_3.json  extended_30.json  extended_31.json  extended_32.json  extended_33.json  extended_34.json  extended_35.json  extended_36.json  extended_37.json  extended_38.json  extended_39.json  extended_4.json  extended_41.json  extended_42.json  extended_43.json  extended_44.json  extended_45.json  (+35 more)
data/latte_subset/: latte_0.json  latte_1.json  (+35 more)
scripts/: collect_results_extract.py  extract_inference.py
(+7 files in other folders)
