[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extract"
version = "0.1.0"
description = "Paper implementation of ExTracT: Explainable Trajectory Corrections"
authors = [{ name = "Anurag Maurya", email = "akmaurya7379@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]